# project

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  todo.txt
.github/workflows/: linux.yml  windows.yml
cmake/: conf.cmake
include/: Animation.h  Assets.h  CollisionHandler.h  Colors.h  Config.h  EnumPrint.h  Game.h  Log.h  MessageBus.h  MessageTypes.h  Particle.h  ParticleSystem.h  Random.h  Resources.h  RoundedRectangle.h  SfmlUtil.h  SfmlUtil.tpp  State.h  StateManager.h  TileMap.h  pch.h  resource_holder.h  resource_holder.tcc
include/Game/: Animateable.h  BaseEntity.h  Bomb.h  CollisionTag.h  Door.h  Entity.h  Explosion.h  Explosion1.h  Gift.h  Gift2.h  Jail.h  LevelParams.h  MovingObjects.h  StatusBar.h  Terrorist.h  Timer.h  Wall.h
include/Game/States/: GameState.h  GameStateInitializer.h  LoadingState.h  LoseState.h  MenuState.h  SettingsState.h  WelcomeState.h  setState.h
include/Gui/: boundText.h
include/StateComponents/: Camera.h
include/States/: MainMenu.h
include/imgui/: CMakeLists.txt  imgui-SFML.h
lib/: CMakeLists.txt
resources/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/Game/: Bomb.cpp  CollisionHandler.cpp  Door.cpp  GameState.cpp  GameStateInitializer.cpp  Gift.cpp  Jail.cpp  LoadingState.cpp  MovingObjects.cpp  SettingsState.cpp  StatusBar.cpp  Terrorist.cpp  Timer.cpp  WelcomeState.cpp  setState.cpp
src/Impl/: Animation.cpp  Game.cpp  ParticleSystem.cpp  RoundedRectangle.cpp  StateManager.cpp
src/imgui/: imgui-SFML.cpp
